--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   <meta name="description" content="Desenvolvedor e Designer localizado no Rio de Janeiro">
 
   <link rel="stylesheet" href="./css/style.min.css">
+  <link rel="icon" href="./Favicon.svg" type="image/svg+xml">
 </head>
 
 <body>
